--- a/src/WebApps/Mc2.CrudTest.Presentation/Client/wwwroot/index.html
+++ b/src/WebApps/Mc2.CrudTest.Presentation/Client/wwwroot/index.html
@@ -13,6 +13,8 @@
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
+    <link href="Mc2.CrudTest.Presentation.Client.styles.css" rel="stylesheet" />
+    <link href="_content/Syncfusion.Blazor.Themes/bootstrap5.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -30,6 +32,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 </body>
 
